Feat: 정산, 카테고리 관련 기능 추가